# Gclaw

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  BRANDING.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  Dockerfile.goreleaser  LICENSE  Makefile  ONCHAIN.md  README.fr.md  README.ja.md  README.md  README.pt-br.md  README.vi.md  README.zh.md  ROADMAP.md  SKILL.md  docker-compose.yml  go.mod  go.sum  install.sh  package-lock.json  package.json  pyproject.toml  vitest.config.mjs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  docker-build.yml  release.yml
cmd/gclaw/: cmd_agent.go  cmd_auth.go  cmd_cron.go  cmd_gateway.go  cmd_migrate.go  cmd_onboard.go  cmd_skills.go  cmd_status.go  gdex_wallet.go  install_script_test.go  main.go  main_test.go  workspace_repair.go  workspace_repair_test.go
config/: config.example.json
contracts/: GmacBuyAndBurn.sol
demo/: demo.cast  demo.sh  read_soul.mjs
dna/: AGENT.md  FITNESS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TRADING_STRATEGY.md  USER.md
docs/: ANTIGRAVITY_AUTH.md  ANTIGRAVITY_USAGE.md  tools_configuration.md  wecom-app-configuration.md
docs/migration/: model-list-migration.md
leaderboard/: README.md  agents.json  leaderboard.html
pkg/agent/: auto_trade.go  auto_trade_journal.go  auto_trade_journal_test.go  auto_trade_memory.go  auto_trade_planner.go  auto_trade_test.go  context.go  context_test.go  instance.go  instance_test.go  loop.go  loop_test.go  memory.go  mock_provider_test.go  registry.go  registry_test.go
pkg/auth/: auth_extra_test.go  oauth.go  store.go  store_test.go
pkg/bus/: bus_test.go
pkg/channels/: base.go  channels_extra_test.go  dingtalk.go  discord.go  feishu_32.go  feishu_64.go  line.go  maixcam.go  manager.go  onebot.go  qq.go  slack.go  slack_test.go  telegram.go  telegram_commands.go  wecom.go  wecom_app.go  wecom_app_test.go  wecom_test.go  whatsapp.go
pkg/config/: config.go  config_test.go  config_validation.go  config_validation_test.go  defaults.go  migration.go  migration_test.go  model_config_test.go
pkg/constants/: channels_test.go
pkg/cron/: cron_extra_test.go
pkg/dashboard/: cli.go  dashboard.go  dashboard_extra_test.go  dashboard_test.go  web.go
pkg/devices/: service.go  service_test.go  source.go
pkg/health/: server.go  server_test.go
pkg/heartbeat/: heartbeat_extra_test.go  service.go  service_test.go
pkg/lifecycle/: manager.go  manager_test.go
pkg/logger/: logger.go  logger_extra_test.go  redact.go  redact_test.go
pkg/metabolism/: errors.go  goodwill.go  metabolism.go  metabolism_persistence_test.go  metabolism_test.go  metabolism_trim_test.go  persistence.go
pkg/migrate/: config.go  migrate.go  migrate_test.go
pkg/providers/: antigravity_provider.go  claude_cli_provider_test.go  claude_provider.go  claude_provider_test.go  codex_cli_provider_test.go  codex_provider.go  factory.go  factory_provider.go  factory_provider_test.go  factory_test.go  github_copilot_provider.go  http_provider.go  legacy_provider.go  toolcall_utils.go  toolcall_utils_test.go  types.go
pkg/recode/: recoder.go  recoder_test.go
pkg/replication/: mutation.go  persistence.go  profile.go  replication_test.go  replicator.go  telepathy.go  telepathy_file.go  telepathy_prune_test.go
pkg/routing/: route.go  route_test.go  session_key.go  session_key_test.go
pkg/runtimeinfo/: auto_trade.go  auto_trade_strategy.go  autonomy.go  autonomy_test.go  managed_wallets.go  status.go  status_test.go
pkg/sandbox/: sandbox.go  sandbox_test.go
pkg/sanitize/: sanitize.go  sanitize_test.go
pkg/session/: manager.go  session_extra_test.go
pkg/skills/: clawhub_registry.go  clawhub_registry_test.go  installer.go  loader.go  registry_test.go
pkg/swarm/: coordinator.go  persistence.go  roles.go  strategies.go  swarm_prune_test.go  swarm_test.go
pkg/tempo/: client.go  client_test.go  types.go
pkg/tools/: cron.go  dashboard_tool.go  (+28 more)
references/: 2026-07-event-desk-markets.md  2026-07-fee-wall-and-gate-fix.md  evolution.md  family.md  forge.md  gmac.md  mcp-trading.md  metabolism.md  onchain-identity.md  safety.md  trading.md  venture.md
scripts/: audit_economics.py  autofund.js  autosettle.js  autotrail.js  blend.py  briefing.py  carry.js  chat.py  cycle_trace.py  dashboard.py  erc8004_register.js  erc8004_reputation.js  evolve.py  feed.js  forge.py  forge_data.js  fund_status.js  gas.js  gdex_sign.js  gmac_buy.js  heartbeat.sh  hl_outcomes.js  hl_perp.js  intel.js  memory.py  metabolism.py  model_select.js  new_wallet.js  notify.js  outcomes.py  peers.js  persona.py  predict.js  predict_bot.js  predict_bot.sh  qr.py  render_card.py  reputation.py  riskguard.js  sandbox_cycle.sh  (+8 more)
templates/: heartbeat.sh
tests/: README.md  conftest.py  test_atomic_writes.py  test_audit_economics.py  test_briefing.py  test_dashboard.py  test_denylist.py  test_evolve.py  test_forge_author.py  test_forge_autoprove.py  test_forge_backtest.py  test_forge_combiner.py  test_forge_fee_wall.py  test_forge_invariants.py  test_forge_perp_margin.py  test_forge_risk_cap.py  test_forge_sandbox.py  test_genome.py  test_heartbeat.py  test_memory.py  test_metabolism.py  test_metabolism_ledger.py  test_outcomes.py  test_reputation.py  test_sizing.py  test_sizing_properties.py  test_telepathy_quarantine.py  test_trace.py
workspace/: AGENT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TRADING_STRATEGY.md
(+97 files in other folders)
